# OpenAstroViz

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  julian.hpp  poc_sgp.cpp  poc_sgp.hpp
.github/workflows/: ci.yml  deploy-web.yml
core/: Cargo.toml  README.md
core/examples/: propagate.rs
core/src/: lib.rs
core/tests/: propagator_errors.rs  vallado_vectors.rs
cpu/: README.md
cuda/: README.md
daemon/: README.md
daemon/openastrovizd/: Cargo.toml  README.md
daemon/openastrovizd/src/: backend.rs  bench.rs  daemon.rs  main.rs  tle.rs
daemon/openastrovizd/tests/: cli.rs
daemon/openastrovizd/tests/util/: mod.rs
docs/: cuda_style.md
docs/archive/: poc_sgp.cpp
scripts/: README.md  run_tests.sh  setup.sh
tests/: julian_catch_tests.cpp  julian_test.cpp  poc_sgp_test.cpp
web/: .eslintrc.cjs  README.md  environment.d.ts  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  styles.css
web/src/components/: CloseApproachPanel.tsx  GlobeCanvas.tsx  ObjectDetails.tsx  SpaceHealthPanel.tsx  TimelineScrubber.tsx
web/src/hooks/: useOrbitalStream.ts
web/src/types/: orbit.ts
web/src/utils/: mockData.test.ts  mockData.ts
webgpu-compute/: Cargo.toml  README.md
webgpu-compute/shaders/: sgp4_fp32.wgsl
webgpu-compute/src/: lib.rs
