[package]
name = "openastroviz-webgpu-compute"
version = "0.1.0"
edition = "2021"
description = "WebGPU compute scaffolding for OpenAstroViz GPU backend"
authors = ["OpenAstroViz Contributors"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
openastroviz-core = { path = "../core" }
thiserror = "1"
wgpu = { version = "0.20", features = ["wgsl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Navigator", "Gpu"]
