[package]
name = "openastrovizd"
version = "0.1.0"
edition = "2021"

[dependencies]
openastroviz-core = { path = "../../core" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
