[package]
name = "openastrovizd"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
humantime = "2"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "sync"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
